--- a/requerimiento-de-diseño.html
+++ b/requerimiento-de-diseño.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "semanas.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "requerimiento-de-dise_o.css"], "outOfDate":[]};
 </script>
   
-  <title>Semanas</title>
+  <title>Requerimiento de Diseño</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=359431441"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3959615288"/>
-  <link rel="stylesheet" type="text/css" href="css/semanas.css?crc=4003109278" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/requerimiento-de-dise_o.css?crc=226616697" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=267543956" id="nomq_pagesheet"/>
@@ -32,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
   <script src="https://webfonts.creativecloud.com/montserrat:n4:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/Km3EKH_0NTMG5GhRRJ3WRaPNY-iCt6RkjlhJu4ugEYCfe1JJ0GV4gUJTwQ9tFDjuwDyLFejuFebojRjtjRI3FDmcweZKZeboZeZ8FQqhwc9hjRq-JfG0-YsldfoRdhXC-YsldfoRdhXCiaiaOcyXdA30jhNlJ6Zkdh4ziev7fbKPpsMMeMw6MqGIQWmDZZMgU-rHab9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/MdDVYIJJXeoHLl5YUELaswo7AN1GqxThAH5Z03DIP-Ife1GJ0GV4gUJTwQ9tFDjuwDyLFejuFebojRjtjRI3FDmcweZKZeboZeZ8FQqhwc9hjRq-JfG0-YsldfoRdhXC-YsldfoRdhXCiaiaOcyXdA30jhNlJ6uRdamk-AmkOWgk-Au8H6GJkZMgIMMjgfMfP6sFiWF8qMY4ntnigb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -52,7 +52,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox bot-n_Normal clearfix colelem" id="u204" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u206-4"><!-- content --><p>Inicio</p></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem" id="u194"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox bot-n_Normal clearfix colelem" id="u195" href="semanas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u196-4"><!-- content --><p>Semanas</p></div><div class="grpelem" id="u197"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox bot-n_Normal clearfix colelem" id="u195" href="semanas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u196-4"><!-- content --><p>Semanas</p></div><div class="grpelem" id="u197"><!-- content --></div></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u199"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u200"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem" id="u4512"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u4514" href="semana-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4518-4"><!-- content --><div id="u4518-3"><p>Semana 1</p></div></div></a></li>
@@ -66,7 +66,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="SubMenu MenuLevel1 clearfix" id="u244"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u245"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem" id="u4596"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u4598" href="plan-de-trabajo.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4602-4"><!-- content --><div id="u4602-3"><p>Plan de trabajo</p></div></div></a></li>
-          <li class="MenuItemContainer clearfix colelem" id="u7383"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u7384" href="requerimiento-de-dise%c3%b1o.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u7386-4"><!-- content --><div id="u7386-3"><p>Requerimiento de Diseño</p></div></div></a></li>
+          <li class="MenuItemContainer clearfix colelem" id="u7383"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix grpelem" id="u7384" href="requerimiento-de-dise%c3%b1o.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u7386-4"><!-- content --><div id="u7386-3"><p>Requerimiento de Diseño</p></div></div></a></li>
          </ul>
         </div>
        </div>
@@ -77,54 +77,36 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="T-tulo-H1 clearfix colelem" id="u5034-4"><!-- content -->
-    <h1>¿CÓMO FUNCIONA ?</h1>
+   <div class="T-tulo-H1 clearfix colelem" id="u7441-4"><!-- content -->
+    <h1>Requerimiento de diseño</h1>
    </div>
-   <div class="clearfix colelem" id="pu4750"><!-- group -->
-    <div class="clearfix grpelem" id="u4750"><!-- column -->
-     <div class="clearfix colelem" id="u4753"><!-- group -->
-      <div class="rounded-corners grpelem" id="u4756" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-     </div>
-     <div class="clearfix colelem" id="u4752"><!-- column -->
-      <div class="colelem" id="u4755" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-      <div class="Subt-tulos-H3 clearfix colelem" id="u4754-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-       <h3>EDICIONES</h3>
-      </div>
-      <div class="Texto clearfix colelem" id="u4751-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-       <p>LA PÁGINA WEB SERÁ EDITADA SEMANALMENTE CON LA INTENCIÓN DE IR INCLUYENDO INFORMACIÓN DE MANERA QUE EL LECTOR PUEDA ESTAR AL TANTO DEL PROGRESO</p>
-      </div>
-     </div>
+   <div class="Subt-tulos-H3 clearfix colelem" id="u7404-4"><!-- content -->
+    <h3>DISPOSITIVO DE SENSOR MUSCULAR MYO</h3>
+   </div>
+   <div class="clearfix colelem" id="pu7407-9"><!-- group -->
+    <div class="clearfix grpelem" id="u7407-9"><!-- content -->
+     <p>&nbsp;</p>
+     <p id="u7407-3">El brazalete Myo es un dispositivo de reconocimiento de gestos usado en el antebrazo y fabricado por Thalmic Labs. El Myo permite al usuario controlar la tecnología de forma inalámbrica utilizando varios movimientos de la mano. Utiliza un conjunto de sensores electromiográficos (EMG) que detectan la actividad eléctrica en los músculos del antebrazo, combinados con un giroscopio, un acelerómetro y un magnetómetro para reconocer los gestos. El Myo se puede usar para controlar videojuegos, presentaciones, música y entretenimiento visual. Se diferencia del dispositivo Leap Motion cuando se usa en lugar de una serie 3D de cámaras que detectan movimiento en el entorno</p>
+     <p>&nbsp;</p>
+     <p>&nbsp;</p>
+     <p>SERÁ USADO PARA CAPTAR VELOCIDAD DE MOVIMIENTO</p>
     </div>
-    <div class="clearfix grpelem" id="u4757"><!-- column -->
-     <div class="clearfix colelem" id="u4758"><!-- group -->
-      <div class="rounded-corners grpelem" id="u4759" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-     </div>
-     <div class="clearfix colelem" id="u4760"><!-- column -->
-      <div class="colelem" id="u4762" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-      <div class="Subt-tulos-H3 clearfix colelem" id="u4763-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-       <h3>Diseño web</h3>
-      </div>
-      <div class="Texto clearfix colelem" id="u4761-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-       <p>LA PÁGINA WEB ESTRÁ ENFOCADA EN INFORMAR AL USUARIO ACERCA DEL AVANCE Y PROGRESO QUE SE PRESENTE DURANTE LAS SESIONES</p>
-      </div>
-     </div>
-    </div>
-    <div class="clearfix grpelem" id="u4764"><!-- column -->
-     <div class="clearfix colelem" id="u4768"><!-- group -->
-      <div class="rounded-corners grpelem" id="u4769" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-     </div>
-     <div class="clearfix colelem" id="u4770"><!-- column -->
-      <div class="colelem" id="u4767" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-      <div class="Subt-tulos-H3 clearfix colelem" id="u4766-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-       <h3>ADVERTENCIA</h3>
-      </div>
-      <div class="Texto clearfix colelem" id="u4765-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-       <p>ESTÁ PÁGINA ES SOLO UN PROTOTIPO DE PRUEBA</p>
-      </div>
-     </div>
+    <div class="museBGSize grpelem" id="u7410"><!-- content -->
+     <div class="fluid_height_spacer"></div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="791" data-content-above-spacer="790" data-content-below-spacer="90" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="Subt-tulos-H3 clearfix colelem" id="u7416-4"><!-- content -->
+    <h3>KINNECT</h3>
+   </div>
+   <div class="clearfix colelem" id="pu7422"><!-- group -->
+    <div class="museBGSize grpelem" id="u7422"><!-- content -->
+     <div class="fluid_height_spacer"></div>
+    </div>
+    <div class="clearfix grpelem" id="u7419-4"><!-- content -->
+     <p>El sensor de Kinect es una revolucionaria cámara nueva de profundidad que es usada en particular en la industria de los videojuegos para capturar los movimientos de las personas y los jugadores de manera eficiente, utilizando la tecnología de una cámara RGB y la cámara de infrarrojos para diferenciar la profundidad.</p>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="1297" data-content-above-spacer="1297" data-content-below-spacer="69" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -137,7 +119,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch","jquery.musepolyfill.bgsize"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
